docs: Updated FOlder Structure

--- a/ETL worksheet/explore-confirmed-us.ipynb
+++ b/ETL worksheet/explore-confirmed-us.ipynb
@@ -219,7 +219,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"csse_covid_19_time_series/time_series_covid19_confirmed_us.csv\")\n",
+    "df = pd.read_csv(\"../csse_covid_19_time_series/time_series_covid19_confirmed_us.csv\")\n",
     "df.tail(5)"
    ]
   },
