--- a/ETL worksheet/explore-deaths-global.ipynb
+++ b/ETL worksheet/explore-deaths-global.ipynb
@@ -220,7 +220,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"csse_covid_19_time_series/time_series_covid19_deaths_global.csv\")\n",
+    "df = pd.read_csv(\"../csse_covid_19_time_series/time_series_covid19_deaths_global.csv\")\n",
     "df.head()"
    ]
   },
